POWR-1138 fixed alignment of Edit relation menu in group content view

--- a/web/themes/custom/cloudy/scss/components/_form.scss
+++ b/web/themes/custom/cloudy/scss/components/_form.scss
@@ -104,7 +104,7 @@ span.next-link .fas {
 .view-my-media .dropbutton-multiple,
 .views-table .dropbutton-multiple {
   margin-right: 2em !important;
-  padding-right: 3em !important;
+  padding-right: 7em !important;
 }
 .view-admin-group-content table .form-item,
 .view-my-content table .form-item,
